--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,10 @@ categories = ["internationalization", "localization", "template-engine"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+handlebars = "1.1.0"
+lazy_static = "1.2.0"
+fluent = "0.5"
+fluent-bundle = "0.6.0"
+fluent-syntax = "0.9.0"
+fluent-locale = "0.4.1"
+serde_json = "1.0"
