--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,12 @@ categories = ["internationalization", "localization", "template-engine"]
 [dependencies]
 handlebars = "1.1.0"
 lazy_static = "1.2.0"
-fluent = "0.5"
-fluent-bundle = "0.6.0"
-fluent-syntax = "0.9.0"
-fluent-locale = "0.4.1"
+fluent = "0.10.2"
+fluent-bundle  = "0.10.2"
+fluent-syntax  = "0.9"
+fluent-langneg = "0.12.0"
 serde_json = "1.0"
+unic-langid = { version = "0.8.0", features = ["macros"] }
 
 [dev-dependencies]
 tempfile = "3.1.0"
