--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: rustup component add rustfmt
-    - run: cargo fmt --check && cargo fmt --check --all-features
+    - run: cargo fmt -- --check && cargo fmt -- --check --all-features
     - run: cargo build && cargo build --all-features
     - run: cargo test && cargo test --all-features
   feature_tests:
@@ -18,6 +18,6 @@ jobs:
         feature: [handlebars, tera]
     steps:
     - uses: actions/checkout@v2
-    - run: cargo fmt --check --feature {{ matrix.feature }}
+    - run: cargo fmt -- --check --feature {{ matrix.feature }}
     - run: cargo build --feature {{ matrix.feature }}
     - run: cargo test --verbose --feature {{ matrix.feature }}
