--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,6 @@ jobs:
         feature: [handlebars, tera]
     steps:
     - uses: actions/checkout@v2
-    - run: cargo fmt --feature {{ matrix.feature }} -- --check
-    - run: cargo build --feature {{ matrix.feature }}
-    - run: cargo test --verbose --feature {{ matrix.feature }}
+    - run: cargo fmt --feature ${{ matrix.feature }} -- --check
+    - run: cargo build --feature ${{ matrix.feature }}
+    - run: cargo test --verbose --feature ${{ matrix.feature }}
