--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "fluent-template-helper"
 version = "0.4.0"
 authors = ["XAMPPRocky <xampprocky@icloud.com>"]
 edition = "2018"
-description = "Handlebars helpers for the Fluent internationalization framework"
+description = "Template helpers for the Fluent internationalization framework"
 license = "MIT/Apache-2.0"
 documentation = "https://docs.rs/fluent-template-helper/"
 repository = "https://github.com/XAMPPRocky/fluent-template-helper"
