--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ fluent-syntax = "0.9.3"
 fluent-langneg = "0.12.0"
 serde_json = "1.0"
 unic-langid = { version = "0.8.0", features = ["macros"] }
+snafu = "0.6.6"
 
 [dev-dependencies]
 tempfile = "3.1.0"
