--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["internationalization", "localization", "template-engine"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-handlebars = "3"
+handlebars = { version = "3", optional = true }
 lazy_static = "1.2.0"
 fluent = "0.11"
 fluent-bundle = "0.11"
@@ -22,6 +22,7 @@ fluent-langneg = "0.12.0"
 serde_json = "1.0"
 unic-langid = { version = "0.8.0", features = ["macros"] }
 snafu = "0.6.6"
+tera = { version = "1.2.0", optional = true }
 
 [dev-dependencies]
 tempfile = "3.1.0"
