--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = "1.0"
 unic-langid = { version = "0.9.0", features = ["macros"] }
 snafu = "0.6.6"
 tera = { version = "1.2.0", optional = true }
+heck = "0.3.1"
 
 [dev-dependencies]
 tempfile = "3.1.0"
