--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ unic-langid = { version = "0.9.0", features = ["macros"] }
 snafu = "0.6.6"
 tera = { version = "1.2.0", optional = true }
 heck = "0.3.1"
+ignore = "0.4.16"
+flume = "0.7.1"
+log = "0.4.8"
 
 [dev-dependencies]
 tempfile = "3.1.0"
