--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -4,6 +4,16 @@ version = "0.0.0"
 authors = ["Erin Power <xampprocky@gmail.com>"]
 edition = "2018"
 
+[lib]
+proc-macro = true
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+quote = "1.0.6"
+syn = { version = "1.0.30", features = ["full"] }
+proc-macro2 = "1.0.18"
+once_cell = "1.4.0"
+ignore = "0.4.16"
+flume = "0.7.1"
+unic-langid = "0.9.0"
