--- a/templates/Cargo.toml
+++ b/templates/Cargo.toml
@@ -30,7 +30,7 @@ heck = "0.3.1"
 ignore = "0.4.16"
 flume = "0.7.1"
 log = "0.4.8"
-fluent-template-macros = { path = "../macros", optional = true }
+fluent-template-macros = { path = "../macros", optional = true, version = "0.5.0" }
 once_cell = "1.4.0"
 arc-swap = "0.4.7"
 
