--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "fluent-template-macros"
 version = "0.5.0"
-authors = ["Erin Power <xampprocky@gmail.com>"]
+authors = ["XAMPPRocky <xampprocky@icloud.com>"]
 edition = "2018"
+description = "Macro Templating for the Fluent localization framework"
+license = "MIT/Apache-2.0"
+documentation = "https://docs.rs/fluent-templates/"
+repository = "https://github.com/XAMPPRocky/fluent-templates"
+keywords = ["handlebars", "tera", "fluent", "internationalization", "localization"]
+categories = ["internationalization", "localization", "template-engine"]
 
 [lib]
 proc-macro = true
