--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: cargo build --workspace && cargo build --all-features --workspace 
-      - run: cargo test --workspace  && cargo test --all-features --workspace 
+      - run: cargo test --workspace --feature macros  && cargo test --all-features --workspace 
   feature_tests:
     runs-on: ${{ matrix.os }}-latest
     strategy:
@@ -18,4 +18,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: cargo build --workspace --feature ${{ matrix.feature }}
-      - run: cargo test --workspace --verbose --feature ${{ matrix.feature }}
+      - run: cargo test --workspace --verbose --feature macros --feature ${{ matrix.feature }}
