--- a/templates/Cargo.toml
+++ b/templates/Cargo.toml
@@ -11,6 +11,9 @@ keywords = ["handlebars", "tera", "fluent", "internationalization", "localizatio
 categories = ["internationalization", "localization", "template-engine"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[package.metadata.docs.rs]
+all-features = true
+targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
 macros = ["fluent-template-macros"]
