--- a/templates/Cargo.toml
+++ b/templates/Cargo.toml
@@ -16,6 +16,7 @@ all-features = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
+default = ["macros"]
 macros = ["fluent-template-macros"]
 
 [dependencies]
