--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: cargo build --workspace && cargo build --all-features --workspace 
-      - run: cargo test --workspace --feature macros  && cargo test --all-features --workspace 
+      - run: cargo test --workspace && cargo test --all-features --workspace 
   feature_tests:
     runs-on: ${{ matrix.os }}-latest
     strategy:
@@ -17,5 +17,5 @@ jobs:
         feature: [handlebars, tera]
     steps:
       - uses: actions/checkout@v2
-      - run: cargo build --workspace --feature ${{ matrix.feature }}
-      - run: cargo test --workspace --verbose --feature macros --feature ${{ matrix.feature }}
+      - run: cargo build --workspace -p fluent-templates --features ${{ matrix.feature }}
+      - run: cargo test --workspace -p fluent-templates --features ${{ matrix.feature }} --verbose
