--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,5 +17,5 @@ jobs:
         feature: [handlebars, tera]
     steps:
       - uses: actions/checkout@v2
-      - run: cargo build --workspace -p fluent-templates --features ${{ matrix.feature }}
-      - run: cargo test --workspace -p fluent-templates --features ${{ matrix.feature }} --verbose
+      - run: cargo build -p fluent-templates --features ${{ matrix.feature }}
+      - run: cargo test -p fluent-templates --features ${{ matrix.feature }} --verbose
