--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,4 +20,4 @@ jobs:
       - run: |
         cd fluent-templates
         cargo build --features ${{ matrix.feature }}
-        cargo test fluent-templates --features ${{ matrix.feature }} --verbose
+        cargo test --features ${{ matrix.feature }} --verbose
