--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,9 +16,7 @@ jobs:
       - run: rustup target add ${{ matrix.target }}
       - run: cargo build --workspace --target ${{ matrix.target }}
       - run: cargo build --workspace --target ${{ matrix.target }} --all-features
-      - run: |
-          cargo test --workspace --target ${{ matrix.target }}
-          cargo test --workspace --target ${{ matrix.target }} --all-features
+      - run: cargo test --workspace --target ${{ matrix.target }} && cargo test --workspace --target ${{ matrix.target }} --all-features
         if: matrix.no_test
   feature_tests:
     runs-on: ${{ matrix.os }}-latest
