--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
       - run: cargo build --workspace --target ${{ matrix.target }}
       - run: cargo build --workspace --target ${{ matrix.target }} --all-features
       - run: cargo test --workspace --target ${{ matrix.target }} && cargo test --workspace --target ${{ matrix.target }} --all-features
-        if: matrix.no_test
+        if: ${{ matrix.no_test }}
   feature_tests:
     runs-on: ${{ matrix.os }}-latest
     strategy:
