--- a/templates/Cargo.toml
+++ b/templates/Cargo.toml
@@ -39,5 +39,5 @@ fluent-template-macros = { path = "../macros", optional = true, version = "0.5.1
 once_cell = "1.4.0"
 arc-swap = "0.4.7"
 
-[dev-dependencies]
+[target.'cfg(not(target = "wasm32-unknown-unknown"))'.dev-dependencies]
 tempfile = "3.1.0"
