--- a/templates/Cargo.toml
+++ b/templates/Cargo.toml
@@ -39,5 +39,6 @@ fluent-template-macros = { path = "../macros", optional = true, version = "0.5.1
 once_cell = "1.4.0"
 arc-swap = "1.1.0"
 
-[target.'cfg(not(target = "wasm32-unknown-unknown"))'.dev-dependencies]
+[dev-dependencies]
 tempfile = "3.1.0"
+getrandom = { version = "0.2.0", features = ["js"] }
