--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,47 @@
 [workspace]
-members = ["templates", "macros"]
+members = [".", "macros"]
+
+[package]
+name = "fluent-templates"
+version = "0.6.1"
+authors = ["XAMPPRocky <xampprocky@icloud.com>"]
+edition = "2018"
+description = "Templating for the Fluent localization framework"
+license = "MIT/Apache-2.0"
+documentation = "https://docs.rs/fluent-templates/"
+repository = "https://github.com/XAMPPRocky/fluent-templates"
+keywords = ["handlebars", "tera", "fluent", "internationalization", "localization"]
+categories = ["internationalization", "localization", "template-engine"]
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[package.metadata.docs.rs]
+all-features = true
+targets = ["x86_64-unknown-linux-gnu"]
+
+[features]
+default = ["macros"]
+macros = ["fluent-template-macros"]
+
+[dependencies]
+handlebars = { version = "3", optional = true }
+lazy_static = "1.2.0"
+fluent = "0.16"
+fluent-bundle = "0.15.2"
+fluent-syntax = "0.11"
+fluent-langneg = "0.13"
+serde_json = "1.0.79"
+unic-langid = { version = "0.9.0", features = ["macros"] }
+snafu = "0.6.6"
+tera = { version = "1.2.0", optional = true }
+heck = "0.3.1"
+ignore = "0.4.18"
+flume = "0.10.12"
+log = "0.4.14"
+fluent-template-macros = { path = "./macros", optional = true, version = "0.6.0" }
+once_cell = "1.10.0"
+arc-swap = "1.5.0"
+intl-memoizer = "0.5.1"
+
+[dev-dependencies]
+tempfile = "3.1.0"
+getrandom = { version = "0.2.0", features = ["js"] }
