--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ snafu = "0.7.0"
 tera = { version = "1.15.0", optional = true }
 heck = "0.4.0"
 ignore = "0.4.18"
-flume = "0.10.12"
+flume = { version = "0.10.12", default-features = false }
 log = "0.4.14"
 fluent-template-macros = { path = "./macros", optional = true, version = "0.7.0" }
 once_cell = "1.10.0"
