--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -21,5 +21,5 @@ syn = { version = "1.0.88", features = ["full"] }
 proc-macro2 = "1.0.36"
 once_cell = "1.10.0"
 ignore = "0.4.16"
-flume = "0.10.12"
+flume = { version = "0.10.12", default-features = false }
 unic-langid = "0.9.0"
