--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,9 @@ all-features = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
-default = ["macros"]
+default = ["macros", "use-ignore"]
 macros = ["fluent-template-macros"]
+use-ignore = ["ignore", "fluent-template-macros/ignore"]
 
 [dependencies]
 handlebars = { version = "4", optional = true }
@@ -34,13 +35,14 @@ unic-langid = { version = "0.9.0", features = ["macros"] }
 snafu = "0.7.0"
 tera = { version = "1.15.0", optional = true }
 heck = "0.4.0"
-ignore = "0.4.18"
+ignore = { version = "0.4.18", optional = true }
 flume = { version = "0.10.12", default-features = false }
 log = "0.4.14"
 fluent-template-macros = { path = "./macros", optional = true, version = "0.8.0" }
 once_cell = "1.10.0"
 arc-swap = "1.5.0"
 intl-memoizer = "0.5.1"
+walkdir = { version = "2.3.3", optional = true }
 
 [dev-dependencies]
 tempfile = "3.3.0"
