--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -15,11 +15,15 @@ proc-macro = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["ignore"]
+
 [dependencies]
 quote = "1.0.15"
 syn = { version = "1.0.88", features = ["full"] }
 proc-macro2 = "1.0.36"
 once_cell = "1.10.0"
-ignore = "0.4.16"
+ignore = { version = "0.4.16", optional = true }
 flume = { version = "0.10.12", default-features = false }
 unic-langid = "0.9.0"
+walkdir = { version = "2.3.3", optional = true }
