--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "fluent-template-macros"
-version = "0.8.0"
-authors = ["XAMPPRocky <xampprocky@icloud.com>"]
-edition = "2018"
-description = "Macro Templating for the Fluent localization framework"
-license = "MIT/Apache-2.0"
-documentation = "https://docs.rs/fluent-templates/"
-repository = "https://github.com/XAMPPRocky/fluent-templates"
-keywords = ["handlebars", "tera", "fluent", "internationalization", "localization"]
-categories = ["internationalization", "localization", "template-engine"]
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+description.workspace = true
+license.workspace = true
+documentation.workspace = true
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [lib]
 proc-macro = true
