--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ fluent-langneg = "0.13"
 serde_json = "1.0.79"
 unic-langid = { version = "0.9.0", features = ["macros"] }
 snafu = "0.7.0"
-tera = { version = "1.15.0", optional = true }
+tera = { version = "1.15.0", optional = true, default-features = false }
 heck = "0.4.0"
 ignore = { version = "0.4.18", optional = true }
 flume = { version = "0.10.12", default-features = false }
