--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ license.workspace = true
 repository.workspace = true
 version.workspace = true
 resolver = "2"
+rust-version = "1.70.0"
 
 [workspace.package]
 edition = "2021"
@@ -37,18 +38,17 @@ use-ignore = ["ignore", "fluent-template-macros/ignore"]
 
 [dependencies]
 handlebars = { version = "5", optional = true }
-lazy_static = "1.2.0"
 fluent = "0.16"
 fluent-bundle = "0.15.2"
 fluent-syntax = "0.11"
 fluent-langneg = "0.13"
 serde_json = "1.0.79"
 unic-langid = { version = "0.9.0", features = ["macros"] }
-snafu = "0.7.0"
+thiserror = "1.0.58"
 tera = { version = "1.15.0", optional = true, default-features = false }
 heck = "0.4.0"
 ignore = { version = "0.4.18", optional = true }
-flume = { version = "0.10.12", default-features = false }
+flume = { version = "0.11.0", default-features = false }
 log = "0.4.14"
 fluent-template-macros = { path = "./macros", optional = true, version = "0.9.1" }
 once_cell = "1.10.0"
