--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,9 +39,10 @@ all-features = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
-default = ["macros", "use-ignore"]
+default = ["macros", "ignore"]
 macros = ["fluent-template-macros"]
-use-ignore = ["ignore", "fluent-template-macros/ignore"]
+ignore = ["dep:ignore", "fluent-template-macros/ignore", "dep:flume", "dep:log"]
+walkdir = ["dep:walkdir", "fluent-template-macros/walkdir", "dep:log"]
 
 [dependencies]
 handlebars = { version = "5", optional = true }
@@ -54,9 +55,9 @@ unic-langid = { workspace = true, features = ["macros"] }
 thiserror = "1.0.58"
 tera = { version = "1.15.0", optional = true, default-features = false }
 heck = "0.5.0"
-ignore = { workspace = true, optional = true  }
-flume = { workspace = true }
-log = "0.4.14"
+ignore = { workspace = true, optional = true }
+flume = { workspace = true, optional = true }
+log = { version = "0.4", optional = true }
 fluent-template-macros = { path = "./macros", optional = true, version = "0.9.4" }
 once_cell = { workspace = true }
 arc-swap = "1.5.0"
