--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,11 +27,11 @@ keywords = ["handlebars", "tera", "fluent", "internationalization", "localizatio
 categories = ["internationalization", "localization", "template-engine"]
 
 [workspace.dependencies]
-unic-langid = "0.9.0"
-ignore = "0.4.18"
-flume = { version = "0.11.0", default-features = false }
-once_cell = "1.10.0"
-walkdir = "2.3.3"
+unic-langid = "0.9"
+ignore = "0.4"
+flume = { version = "0.11", default-features = false }
+once_cell = "1.19"
+walkdir = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [package.metadata.docs.rs]
@@ -43,27 +43,27 @@ default = ["macros", "ignore"]
 macros = ["fluent-template-macros"]
 ignore = ["dep:ignore", "fluent-template-macros/ignore", "dep:flume", "dep:log"]
 walkdir = ["dep:walkdir", "fluent-template-macros/walkdir", "dep:log"]
+handlebars = ["dep:handlebars", "dep:serde_json"]
+tera = ["dep:tera", "dep:heck", "dep:serde_json"]
 
 [dependencies]
 handlebars = { version = "5", optional = true }
 fluent = "0.16"
-fluent-bundle = "0.15.2"
+fluent-bundle = "0.15"
 fluent-syntax = "0.11"
 fluent-langneg = "0.13"
-serde_json = "1.0.79"
+serde_json = { version = "1", optional = true }
 unic-langid = { workspace = true, features = ["macros"] }
-thiserror = "1.0.58"
-tera = { version = "1.15.0", optional = true, default-features = false }
-heck = "0.5.0"
+thiserror = "1"
+tera = { version = "1.15", optional = true, default-features = false }
+heck = { version = "0.5", optional = true }
 ignore = { workspace = true, optional = true }
 flume = { workspace = true, optional = true }
 log = { version = "0.4", optional = true }
 fluent-template-macros = { path = "./macros", optional = true, version = "0.9.4" }
 once_cell = { workspace = true }
-arc-swap = "1.5.0"
-intl-memoizer = "0.5.1"
+intl-memoizer = "0.5"
 walkdir = { workspace = true, optional = true }
 
 [dev-dependencies]
-tempfile = "3.3.0"
-getrandom = { version = "0.2.0", features = ["js"] }
+tempfile = "3.3"
