--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ keywords = ["handlebars", "tera", "fluent", "internationalization", "localizatio
 categories = ["internationalization", "localization", "template-engine"]
 
 [workspace.dependencies]
-unic-langid = "0.9"
+unic-langid = { version = "0.9", features = ["macros"] }
 ignore = "0.4"
 flume = { version = "0.11", default-features = false }
 once_cell = "1.19"
