--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,11 @@ repository = "https://github.com/XAMPPRocky/fluent-templates"
 authors = ["XAMPPRocky <xampprocky@icloud.com>"]
 description = "Templating for the Fluent localization framework"
 keywords = [
-    "handlebars",
-    "tera",
-    "fluent",
-    "internationalization",
-    "localization",
+  "handlebars",
+  "tera",
+  "fluent",
+  "internationalization",
+  "localization",
 ]
 categories = ["internationalization", "localization", "template-engine"]
 
@@ -44,12 +44,13 @@ all-features = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
-default = ["macros", "ignore"]
+default = ["macros", "ignore", "minijinja"]
 macros = ["fluent-template-macros"]
 ignore = ["dep:ignore", "fluent-template-macros/ignore", "dep:flume", "dep:log"]
 walkdir = ["dep:walkdir", "fluent-template-macros/walkdir", "dep:log"]
 handlebars = ["dep:handlebars", "dep:serde_json"]
 tera = ["dep:tera", "dep:heck", "dep:serde_json"]
+minijinja = ["dep:minijinja", "dep:heck"]
 
 [dependencies]
 handlebars = { version = "6", optional = true }
@@ -67,6 +68,7 @@ log = { version = "0.4", optional = true }
 fluent-template-macros = { path = "./macros", optional = true, version = "0.13.0" }
 intl-memoizer = "0.5"
 walkdir = { workspace = true, optional = true }
+minijinja = { version = "2.7.0", default-features = false, optional = true }
 
 [dev-dependencies]
 tempfile = "3.3"
