chore: Include cargo doc tests in CI pipeline
Add documentation tests to Rust CI workflow

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,7 @@ jobs:
       - run: cargo build --workspace --target ${{ matrix.target }} --all-features
       - run: cargo test --workspace --target ${{ matrix.target }} && cargo test --workspace --target ${{ matrix.target }} --all-features
         if: contains(matrix.target, 'linux')
+      - run: cargo test --doc
   feature_tests:
     runs-on: ${{ matrix.os }}-latest
     strategy:
